// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`API Router Authentication based on SLAuth headers Request allowed when Authentication Mechanism is ASAP 1`] = `Object {}`;

exports[`API Router Authentication based on SLAuth headers Request allowed when Authentication Mechanism is SLAuth Token 1`] = `Object {}`;

exports[`API Router Endpoints Delete Installation Should work with new delete installation route 1`] = `Object {}`;

exports[`API Router Endpoints Repo Sync State should return 404 if no installation is found 1`] = `Object {}`;

exports[`API Router Endpoints installation should return 404 if no installation is found 1`] = `Object {}`;

exports[`API Router Endpoints installation should return a connection when subscription is OK 1`] = `
Object {
  "connections": Array [
    Object {
      "foo": "bar",
      "isGlobalInstall": false,
      "syncState": "PENDING",
    },
  ],
  "failedConnections": Array [],
  "hasConnections": true,
  "host": "https://test-atlassian-instance.atlassian.net",
  "installationId": "1234",
  "syncStateUrl": "http://127.0.0.1/api/1234/https%3A%2F%2Ftest-atlassian-instance.atlassian.net/syncstate",
}
`;

exports[`API Router Endpoints installation should return a failed connection when subscription is fucked 1`] = `
Object {
  "connections": Array [],
  "failedConnections": Array [
    Object {
      "deleted": false,
      "error": "Error: Error executing Axios Request: Request failed with status code 500. More details in logs",
      "id": 1234,
    },
  ],
  "hasConnections": true,
  "host": "https://test-atlassian-instance.atlassian.net",
  "installationId": "1234",
  "syncStateUrl": "http://127.0.0.1/api/1234/https%3A%2F%2Ftest-atlassian-instance.atlassian.net/syncstate",
}
`;

exports[`API Router Endpoints sync should reset sync state if asked to 1`] = `"{\\"message\\":\\"Successfully (re)started sync for 1234\\"}"`;

exports[`API Router Endpoints sync should return 404 if no installation is found 1`] = `"Not Found"`;

exports[`API Router Endpoints sync should trigger the sync or start function 1`] = `"{\\"message\\":\\"Successfully (re)started sync for 1234\\"}"`;

exports[`API Router Endpoints verify should return 'Installation already enabled' 1`] = `"Verification successful"`;
